scrollbar fixed

--- a/src/styles/games-lists.css
+++ b/src/styles/games-lists.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
 }
 
@@ -7,7 +7,7 @@
 }
 ::-webkit-scrollbar-button {
   background-color: green;
-}
+} */
 .games__list {
   width: 95%;
   position: relative;
@@ -88,10 +88,10 @@
   /* height: 400px; */
   /* padding: 30px 0; */
   /* margin-bottom: 15px; */
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  /* -ms-overflow-style: none;
+  scrollbar-width: none; */
   overflow-x: auto;
-  overflow-y: hidden;
+  overflow-y: scroll;
   flex-shrink: 0;
   justify-content: space-between;
   scroll-behavior: smooth;
@@ -112,6 +112,11 @@
   /* border: 1px solid red; */
 }
 
+
+
+.cards__container::-webkit-scrollbar {
+  display: none;
+}
 .cards__container__game {
   width: 100%;
   display: flex;
@@ -299,7 +304,7 @@
   margin-top: 1rem;
   /* padding: 4 0; */
   overflow: auto;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .games__container .home__animation {
